--- a/ChatHost/App.config
+++ b/ChatHost/App.config
@@ -58,7 +58,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
 	
 	
 	
@@ -82,7 +82,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+                                      <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
 	
 	
 	
@@ -130,7 +130,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -154,7 +154,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -178,7 +178,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -202,7 +202,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -226,7 +226,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -274,7 +274,7 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-3.1.31.0" newVersion="3.1.31.0" />
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
@@ -322,7 +322,223 @@
 	
 	
 	
-                                      <bindingRedirect oldVersion="0.0.0.0-2.1.2.1721" newVersion="2.1.2.1721" />
+                                      <bindingRedirect oldVersion="0.0.0.0-2.1.3.1795" newVersion="2.1.3.1795" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.1" newVersion="7.0.0.1" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="Microsoft.Extensions.Logging" publicKeyToken="adb9793829ddae60" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="Microsoft.Extensions.Caching.Memory" publicKeyToken="adb9793829ddae60" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="Microsoft.Data.Sqlite" publicKeyToken="adb9793829ddae60" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.1.0" newVersion="7.0.1.0" />
+	
+	
+	
+	
+	
+                          </dependentAssembly>
+	
+	
+	
+	
+	
+                          <dependentAssembly>
+	
+	
+	
+	
+	
+                                      <assemblyIdentity name="Microsoft.Extensions.DependencyModel" publicKeyToken="adb9793829ddae60" culture="neutral" />
+	
+	
+	
+	
+	
+                                      <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 	
 	
 	
